Spring Security Hello world project

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: superpostgres
+    password: ps123
     driverClassName: org.postgresql.Driver
   mvc:
     pathmatch:
